# rgbd-capture

./: LICENSE  README.md  pyproject.toml
src/rgbd_capture/: capture.py  cli.py  serde.py
